--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,57 @@
 body {
   font-family: "Poppins", sans-serif;
   width: 100%;
+  height: 100%;
   color: white;
   background-color: black;
 }
 
-#about-me-container {
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+.icon {
+  height: 50px;
+}
+
+#header-container {
   display: flex;
   width: 100%;
 }
 
-#about-me-photo {
+#header-photo {
   display: flex;
   align-content: flex-start;
-  width: 45%;
+  height: 50vh;
   margin-left: 0px;
+  filter: grayscale(100%);
 }
 
-#about-me-description {
+@media (max-width: 700px) {
+  #header-photo {
+    display: flex;
+    align-items: center;
+
+    height: 200px;
+  }
+}
+
+#header-description {
   padding-top: 70px;
   padding-left: 20px;
   width: 500px;
 }
 
+#about-container {
+  background-color: #f07167;
+  height: 100%;
+  margin-bottom: 0px;
+}
+
 #projects-container {
   background-color: #00afb9;
+  margin-top: 0px;
 }
 
 #projects-title {
@@ -53,7 +80,7 @@ body {
 #footer-container {
   display: flex;
   justify-content: center;
-  position: absolute;
+  /* position: absolute; */
   background-color: #0081a7;
   height: 12.5%;
   width: 100%;
