edit index.html, styles.css

--- a/styles.css
+++ b/styles.css
@@ -6,46 +6,39 @@ body {
   background-color: black;
 }
 
-a {
-  text-decoration: none;
-  color: whitesmoke;
-}
-
-.icon {
+.icon,
+.icon-link {
   height: 40px;
   padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: width 3s;
+}
+
+.icon-link:hover {
+  height: 50px;
 }
 
 #header-container {
-  display: flex;
   width: 100%;
-  height: auto;
-}
-
-#header-photo {
-  display: flex;
-  align-content: center;
-  filter: grayscale(100%);
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
-}
-
-#photo {
-  width: 50%;
-  height: auto;
+  height: 300px;
 }
 
 #header-description {
   padding-top: 70px;
   padding-left: 20px;
   padding-right: 20px;
-  width: 500px;
+  width: 800px;
+}
+
+#photo {
+  width: 20%;
+  height: auto;
+  border: 3px solid white;
 }
 
 #about-container {
-  background-color: #f07167;
+  background-color: #59c3c3;
   height: 100%;
   padding-right: 30px;
   padding-left: 30px;
@@ -54,7 +47,7 @@ a {
 }
 
 #projects-container {
-  background-color: #00afb9;
+  background-color: #52489c;
   margin-top: 0px;
 }
 
@@ -76,11 +69,16 @@ a {
   display: grid;
   place-items: center;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 70px;
 }
 
 .project-image {
   width: 75vh;
+  transition: width 0.5s;
+}
+
+.project-image:hover {
+  width: 85vh;
 }
 
 #first-project-text,
@@ -91,16 +89,24 @@ a {
 }
 
 .tech-icons-container {
-  display: grid;
-  align-items: center;
+  /* display: grid;
+  align-items: center; */
 }
 
 .tech-icons-container-1,
 .tech-icons-container-2 {
   display: flex;
   justify-content: center;
-  padding-left: 5px;
-  padding-right: 5px;
+}
+
+.site-link,
+.github-link {
+  display: flex;
+  justify-content: center;
+}
+
+.tech-icons-container-2 {
+  border: 1px solid whitesmoke;
 }
 
 #footer-container {
@@ -111,6 +117,7 @@ a {
   height: 12.5%;
   width: 100%;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 @media screen and (max-width: 480px) {
@@ -122,6 +129,17 @@ a {
   #second-project-text,
   #third-project-text,
   #fourth-project-text {
-    width: 45vh;
+    width: 70vh;
+  }
+  .tech-icons-container-1,
+  .tech-icons-container-2 {
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid red;
+    /* padding-left: 10px;
+    padding-right: 10px; */
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    width: 300px;
   }
 }
