edit index.html, styles.css

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ body {
   #second-project-text,
   #third-project-text,
   #fourth-project-text {
-    width: 40vh;
+    width: 100px;
   }
   .tech-icons-container-1,
   .tech-icons-container-2 {
