--- a/styles.css
+++ b/styles.css
@@ -21,18 +21,24 @@ body {
 
 #header-container {
   width: 100%;
-  height: 300px;
+  height: 500px;
 }
 
 #header-description {
   padding-top: 70px;
-  padding-left: 20px;
+  padding-left: 50px;
   padding-right: 20px;
-  width: 800px;
+}
+
+#header-name {
+  font-size: 60px;
+}
+#header-title {
+  font-size: 40px;
 }
 
 #photo {
-  width: 20%;
+  width: 30%;
   height: auto;
   border: 5px solid white;
 }
@@ -40,8 +46,8 @@ body {
 #about-container {
   background-color: #59c3c3;
   height: 100%;
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 50px;
+  padding-left: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -53,8 +59,8 @@ body {
 
 #projects-title {
   height: 100%;
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 50px;
+  padding-left: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -89,9 +95,8 @@ body {
   width: 90vh;
 }
 
-.tech-icons-container {
-  /* display: grid;
-  align-items: center; */
+.proj-links {
+  color: #59c3c3;
 }
 
 .tech-icons-container-1,
@@ -115,10 +120,10 @@ body {
   position: absolute;
   justify-content: center;
   background-color: #0081a7;
-  height: 12.5%;
+  height: 8%;
   width: 100%;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 #footer-text {
@@ -139,7 +144,7 @@ body {
   #second-project-text,
   #third-project-text,
   #fourth-project-text {
-    width: 200px;
+    width: 250px;
   }
   .tech-icons-container-1,
   .tech-icons-container-2 {
@@ -149,6 +154,6 @@ body {
     padding-right: 10px;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    width: 200px;
+    width: 250px;
   }
 }
