--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,15 @@ body {
   font-size: 40px;
 }
 
+#about-paragraphs-container {
+  border: 1px solid white;
+  display: grid;
+  justify-items: start;
+  width: 100vh;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 #projects-container {
   background-color: #52489c;
   margin-top: 0px;
@@ -73,6 +82,10 @@ body {
   padding-left: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.project-title-header {
+  font-size: 40px;
 }
 
 #projects-links-container {
@@ -103,6 +116,7 @@ body {
 #third-project-text,
 #fourth-project-text {
   width: 90vh;
+  font-size: 20px;
 }
 
 .proj-links {
@@ -142,6 +156,18 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  #photo {
+    width: 50%;
+    height: auto;
+  }
+
+  .project-title-header {
+    font-size: 35px;
+  }
+
+  #about-paragraphs-container {
+    width: 60vh;
+  }
   .project-image {
     width: 30vh;
   }
@@ -154,7 +180,7 @@ body {
   #second-project-text,
   #third-project-text,
   #fourth-project-text {
-    width: 250px;
+    width: 300px;
   }
   .tech-icons-container-1,
   .tech-icons-container-2 {
@@ -164,6 +190,6 @@ body {
     padding-right: 10px;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    width: 250px;
+    width: 300px;
   }
 }
