--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,23 @@ body {
 
 #about-title,
 #projects-title {
+  font-size: 40px;
+
   transition: font-size 1s;
 }
 
 #about-title:hover,
 #projects-title:hover {
-  font-size: 40px;
+  font-size: 50px;
+}
+
+#about-paragraphs-container {
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  border: 1px solid white;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 75%;
 }
 
 #projects-container {
@@ -88,6 +99,10 @@ body {
   padding-bottom: 70px;
 }
 
+.projects-headers {
+  font-size: 35px;
+}
+
 .project-image {
   width: 75vh;
   border: 3px solid white;
@@ -102,7 +117,9 @@ body {
 #second-project-text,
 #third-project-text,
 #fourth-project-text {
-  width: 90vh;
+  width: 100vh;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
 }
 
 .proj-links {
@@ -142,6 +159,14 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  #photo {
+    width: 40%;
+  }
+
+  .projects-headers {
+    font-size: 25px;
+  }
+
   .project-image {
     width: 30vh;
   }
@@ -150,11 +175,15 @@ body {
     width: 35vh;
   }
 
+  #about-paragraphs-container {
+    width: 90%;
+  }
+
   #first-project-text,
   #second-project-text,
   #third-project-text,
   #fourth-project-text {
-    width: 250px;
+    width: 35vh;
   }
   .tech-icons-container-1,
   .tech-icons-container-2 {
@@ -164,6 +193,6 @@ body {
     padding-right: 10px;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    width: 250px;
+    width: 35vh;
   }
 }
