--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 #header-name {
-  font-size: 60px;
+  font-size: 70px;
 }
 #header-title {
   font-size: 40px;
@@ -41,6 +41,8 @@ body {
   width: 30%;
   height: auto;
   border: 5px solid white;
+  border-radius: 25px;
+  margin-bottom: 20px;
 }
 
 #about-container {
@@ -68,6 +70,7 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 20px;
   border: 1px solid white;
+  border-radius: 25px;
   padding-left: 10px;
   padding-right: 10px;
   width: 75%;
@@ -140,6 +143,7 @@ body {
 
 .tech-icons-container-2 {
   border: 1px solid whitesmoke;
+  border-radius: 25px;
 }
 
 #footer-container {
@@ -159,6 +163,13 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  #header-name {
+    font-size: 60px;
+  }
+  #header-title {
+    font-size: 25px;
+  }
+
   #photo {
     width: 40%;
   }
