--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
 #header-name {
   font-size: 70px;
 }
+
 #header-title {
   font-size: 40px;
 }
@@ -58,7 +59,6 @@ body {
 #projects-title,
 #skills-title {
   font-size: 50px;
-
   transition: font-size 1s;
 }
 
@@ -75,13 +75,6 @@ body {
 
 .container {
   display: flex;
-
-  /* border: 1px solid green; */
-}
-
-.container-1,
-.container-2 {
-  /* border: 1px solid red; */
 }
 
 #about-paragraphs-container {
@@ -97,15 +90,19 @@ body {
 
 #about-container {
   background-color: #59c3c3;
-  height: 100%;
-  padding-right: 50px;
-  padding-left: 50px;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 #skills-container {
   background-color: #84a98c;
+}
+
+#projects-container {
+  background-color: #52489c;
+}
+
+#about-container,
+#skills-container,
+#projects-container {
   height: 100%;
   padding-right: 50px;
   padding-left: 50px;
@@ -118,27 +115,14 @@ body {
   font-size: 25px;
   border: 1px solid white;
   border-radius: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
   margin-left: 20px;
   width: 75%;
-}
-
-#projects-container {
-  background-color: #52489c;
-  height: 100%;
-  padding-right: 50px;
-  padding-left: 50px;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 #projects-title {
   height: 100%;
   padding-right: 50px;
-  /* padding-left: 50px; */
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -174,9 +158,9 @@ body {
 #second-project-text,
 #third-project-text,
 #fourth-project-text {
-  width: 100vh;
   font-family: "Lato", sans-serif;
   font-size: 20px;
+  width: 100vh;
 }
 
 .proj-links {
@@ -184,11 +168,7 @@ body {
 }
 
 .tech-icons-container-1,
-.tech-icons-container-2 {
-  display: flex;
-  justify-content: center;
-}
-
+.tech-icons-container-2,
 .site-link,
 .github-link {
   display: flex;
@@ -202,7 +182,6 @@ body {
 
 #footer-container {
   display: flex;
-  position: absolute;
   justify-content: center;
   background-color: #0081a7;
   height: 8%;
@@ -232,8 +211,7 @@ body {
   #projects-title,
   #skills-title {
     font-size: 40px;
-
-    transition: font-size 1s;
+    transition: font-size 0.5s;
   }
 
   #about-title:hover,
@@ -243,27 +221,17 @@ body {
   }
 
   #skills-paragraph {
-    font-family: "Lato", sans-serif;
     font-size: 20px;
-    border: 1px solid white;
-    border-radius: 25px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
     margin-left: 0px;
     width: 90%;
   }
 
   .container {
     display: grid;
-
-    /* border: 1px solid green; */
   }
 
   .container-1,
   .container-2 {
-    /* border: 1px solid red; */
     width: 90%;
   }
 
@@ -272,10 +240,10 @@ body {
     font-size: 18px;
     border: 1px solid white;
     border-radius: 25px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: 0px;
-    width: 75%;
+    width: 100%;
   }
 
   .projects-headers {
@@ -288,10 +256,6 @@ body {
 
   .project-image:hover {
     width: 35vh;
-  }
-
-  #about-paragraphs-container {
-    width: 90%;
   }
 
   #first-project-text,
